--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,13 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+# Code Coverage
+coverage
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
